--- a/main.css
+++ b/main.css
@@ -1,8 +1,6 @@
 *{
     font-family: "kalam";
-    /* text-align: center; */
     justify-items: center;
-
     margin: 0;
 }
 .top{
@@ -19,8 +17,7 @@
 }
 .inner{
     justify-items: center;
-    
-    padding: 10px; 
+    padding: 10px;
 }
 textarea{
   width:571px;
@@ -32,11 +29,7 @@ textarea{
 textarea:focus{
 border: black 2px solid;
 }
-.output{
-    margin-left:450px;
-    margin-right:450px;
 
-}
 .output-heading{
     font-family: 200;
    
@@ -49,19 +42,29 @@ border: black 2px solid;
     border: black solid 2px;
 }
  .main{
-text-align: center;
+margin: auto;
+max-width: 600px;
+    padding: 1rem;
 
+    box-sizing: border-box;   
  }
  .footer{
     background-color: #F2C94C;
-    padding-top: 50px;
-    height:150px;
+   position:fixed;
+   bottom: 0;
     justify-content: center;
-    margin-top: 50px;
+    width: 100%;
 text-align: center;
+padding: 1rem;
  }
  p{
     
     text-align: center;
-    margin:25px;
+    
  }
+.submit_button{
+
+    padding: 16px 30px 16px 30px ;
+    background-color: #F2C94C;
+    border: none;
+}
